--- a/apiBooks/client/package.json
+++ b/apiBooks/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-spinner": "^7.0.0",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
